# tqdne

./: .envexample  .gitignore  .gitmodules  .pre-commit-config.yaml  README.html  README.md  README.rst  environment.yaml  pyproject.toml  tox.ini
.git_old/: FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git_old/logs/: HEAD
.github/workflows/: ci.yml  format.yml  python.yml
archive/notebooks/: GM0-inference-EEW_moving-avg-shifted.ipynb  GM0-inference_BASE.ipynb  test_dataset.ipynb  test_diffusion.ipynb
doc/reference/: logging.rst  model.rst
docs/: conf.py
docs/reference/: dataset.rst  index.rst  lightning.rst  methods.rst  metrics.rst  utils.rst
envs/: environment.yaml
experiments/: .gitignore  README.md  Residual_plot_stead.ipynb  _evaluate_torchaudiospectogram.ipynb  build_dataset.py  build_dataset.sh  config.py  create_dataset_from_STEAD.py  evaluate-edm-1d-full.sh  evaluate-edm-1d-test.sh  evaluate-edm-test.sh  evaluate-edm-train.sh  evaluate-latent_edm-1d-full.sh  evaluate-latent_edm-1d-test.sh  evaluate-latent_edm-test.sh  evaluate-latent_edm-train.sh  evaluate-latent_edm-validation.sh  evaluate.py  evaluate.sh  evaluate_1d_edm.sh  evaluate_1d_latent_edm.sh  evaluate_edm.sh  evaluate_latent_edm-test.sh  evaluate_latent_edm-train.sh  evaluate_latent_edm-valid.sh  evaluation.ipynb  example_GMM.py  figure.ipynb  generate.py  generate.sh  generate_generative.py  generate_stead.py  generated.h5  run_autoencoder.sh  run_classifier.sh  run_latent_edm.sh  stead_download.py  test_gan.py  test_out_stuff.py  test_wgan.py  (+23 more)
experiments/configs/: classifier.py  consisentcy-model.py  ddim.py  ddim_1d.py  ddim_2d.py  ddpm.py  unet.py
experiments/envs/: environment.yaml
experiments/notebooks/: tqdne-waveform_generation.py
metrics/: PGA.py  SA.py  SA_distance.ipynb  example_GMM.py  fft_FAS.py  inspecting_waveform-residual.ipynb  inspecting_waveform.ipynb  utils.py
notebooks/: GM0-evaluation_TEMPLATE.ipynb  GM0-inference-EEW_moving-avg-shifted.ipynb  GM0-inference.ipynb  GM0-inference_BASE.ipynb  LogSpectrogram.ipynb  Project Report - This Quake Does Not Exist.ipynb  dataset_stats.ipynb  evaluation.ipynb  filter.ipynb  generate_samples.ipynb  gm0-inference-EEW_stft.ipynb  gm0-inference.ipynb  random_data_generator.ipynb  refs.bib  report_dataset.ipynb  report_model.ipynb  signal_statistics.pkl  test_dataset.ipynb  test_diffusion.ipynb  test_envelope.ipynb  test_gan.ipynb  to_mseed.ipynb  tqdne-waveform_generation.py  trans_env_statistics.pkl
run-scripts/: run-build_dataset.sh  run-train-GM0.sh  run-train-classifier.sh  run-train_cond_ddpm.sh  run-train_ddpm.sh  train_toy_low-freq.sh
runfiles/: run_training.sh  train_diff.sh  train_wgan.sh
scripts/: .gitignore  README.md  generate_waveforms.py  japan.csv  little_japan.csv  write_to_seisbench.py
scripts/preprocessing/: 01_preprocess.py  (+4 more)
tqdne/: __init__.py  architectures.py  autoencoder.py  blocks.py  callbacks.py  classification.py  classifier.py  conf.py  config.py  consistency_model.py  data_utils.py  dataloader.py  dataset.py  diffusers.py  diffusion.py  diffusion_lightning.py  edm.py  ema.py  gan.py  gan_lightning.py  generate_waveforms.py  lightning.py  logging.py  loss.py  metric.py  model.py  model_utils.py  nn.py  plot.py  representation.py  representations.py  simple_dataset.py  training.py  unet.py  unet_1d.py  unet_2d.py  utils.py  wfdataset.py  wgan_lightning.py  wgan_model.py
weights/: autoencoder.ckpt  edm.ckpt
(+36 files in other folders)
