[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tqdne"
authors= [{name = "HighFEM team", email = "example@mail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "pathos>=0.3.4",
    "pytorch-lightning==2.5.1",
]

[tool.setuptools]
packages = ["tqdne"]

[tool.setuptools.dynamic]
version = {attr = "tqdne.__init__.__version__"}

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S301", "PLR0913", "S101", "PLR2004", "S603", "S607", "PLW2901", "E721", "S307", "PLR0915", "E741", "S110", "E722"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "pre-commit>=3.8.0",
    "ruff",
]
